fix(material/button): fix vert alignment of button icon
* set line-height of mat-icon-button to 1

--- a/src/material/button/button.scss
+++ b/src/material/button/button.scss
@@ -79,7 +79,7 @@
   height: $mat-icon-button-size;
 
   flex-shrink: 0;
-  line-height: $mat-icon-button-size;
+  line-height: 1;
   border-radius: $mat-icon-button-border-radius;
 
   i, .mat-icon {
